clusters/k4/kubernetes/apps/kyverno/kyverno/policies/deny-ingress.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/policies.kyverno.io/validatingpolicy_v1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-ingress
  annotations:
    policies.kyverno.io/title: Deny Ingress on this cluster
    policies.kyverno.io/severity: high
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/minversion: 1.14.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/subject: Ingress
spec:
  validationActions:
    - Audit
  evaluation:
    admission:
      enabled: true
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
  validations:
    - expression: 'false'
      message: "Ingresses are not allowed on this cluster"
