clusters/k4/kubernetes/apps/kyverno/kyverno/policies/deny-secret-serviceaccount-token-type.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/policies.kyverno.io/validatingpolicy_v1.json
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: deny-secret-serviceaccount-token-type
  annotations:
    policies.kyverno.io/title: Deny Secret Service Account Token Type in ValidatingPolicy
    policies.kyverno.io/category: Security in vpol
    kyverno.io/kubernetes-version: "1.30"
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Secret, ServiceAccount
    policies.kyverno.io/description: Before version 1.24, Kubernetes automatically generated Secret-based tokens  for ServiceAccounts. When creating a Secret, you can specify its type using the  type field of the Secret resource . The type kubernetes.io/service-account-token is used for legacy ServiceAccount tokens . These legacy Tokens can be of security concern and should be audited.
spec:
  validationActions:
    - Audit
  evaluation:
    admission:
      enabled: true
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - secrets
  validations:
    - expression: object.type != 'kubernetes.io/service-account-token'
      message: Secret ServiceAccount token type is not allowed.
