clusters/k4/kubernetes/apps/kyverno/kyverno/policies/pss-baseline-allow-hostpath-privileged.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/kyverno.io/clusterpolicy_v1.json
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: pss-baseline-allow-hostpath-privileged
  annotations:
    policies.kyverno.io/title: Baseline Pod Security Standards
    policies.kyverno.io/category: Pod Security, EKS Best Practices
    policies.kyverno.io/severity: high
    kyverno.io/kyverno-version: 1.8.0
    policies.kyverno.io/minversion: 1.8.0
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      The baseline profile of the Pod Security Standards is a collection of the
      most basic and important steps that can be taken to secure Pods. Beginning
      with Kyverno 1.8, an entire profile may be assigned to the cluster through a
      single rule. This policy configures the baseline profile through the latest
      version of the Pod Security Standards cluster wide.
spec:
  background: true
  validationFailureAction: Audit
  rules:
    - name: baseline
      match:
        any:
          - resources:
              kinds:
                - Pod
              operations:
                - CREATE
                - UPDATE
              selector:
                matchLabels:
                  kyverno.samoth.eu/baseline: allow-hostpath-privileged
      validate:
        podSecurity:
          level: baseline
          version: latest
          exclude:
            - controlName: HostPath Volumes
            - controlName: Privileged Containers
